# 15-puzzle-helper

./: Cargo.toml  README.md
src/: main.rs
src/core/: mod.rs  parity.rs  scrambler.rs  solver.rs  types.rs
src/core/types/: board.rs  gameboard.rs  traits.rs
src/lib/: mod.rs  parity.rs  scrambler.rs  solver.rs  types.rs
src/lib/types/: board.rs  gameboard.rs  mov.rs  traits.rs
