[package]
name = "gemhelper"
version = "0.1.0"
authors = ["dwuggh <dwuggh@gmail.com>"]
edition = "2018"

description = "solver and scramble generator for 15-puzzle"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "gemhelper"
# path = "src/main.rs"

[dependencies]
rand = "0.7.3"
